adding bootstrap to public folder and removing node-sass watch cause doesnt work

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/dist/styles/lib/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/dist/styles/lib/bootstrap-theme.min.css">
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/dist/styles/styles.css">
     
     <title>Bike2Bytes - Dave Morison</title>
