working star rating functionality

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,8 @@
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/dist/styles/lib/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/dist/styles/lib/bootstrap-theme.min.css">
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/dist/styles/styles.css">
-    
+    <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
+
     <title>Bike2Bytes - Dave Morison</title>
     <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
